--- a/closed-captions/css.css
+++ b/closed-captions/css.css
@@ -8,8 +8,10 @@ Feel free to adjust the defaults to your needs.
 #closed-captions p {
 	opacity: 0;
 	transition: .05s;
-	position: absolute;
+    position: absolute;
+    color: grey;
 }
+
 #closed-captions .on {
 	opacity: 1;
 }
@@ -18,8 +20,49 @@ Feel free to adjust the defaults to your needs.
 	opacity: 0;
 }
 .voice1 {
-	font-style: italic;
+	font-style: italic;   
+    
 }
+
+.voice2 {
+    text-transform: uppercase;
+    font-size: 0.4em;
+}
+
+iframe{
+    position:relative;
+    left: 525px;
+    margin-top: 250px; 
+    height: 300px;
+    width: 400px;
+    
+    
+}
+
+
+body {
+    font-family: sans-serif;
+    
+  }
+    .gradient {
+  width: 100%;
+  height: 100%;
+  animation: pulse 5s infinite;
+}
+
+@keyframes pulse {
+  0% {
+    background-color: black;
+  }
+  100% {
+    background-color: grey;
+
+
+        
+
+
+
+
 
 /* **********************************************
 The first paragraph, with extended timing for 
@@ -31,66 +74,177 @@ You probably want to change the styling.
 ********************************************** */
 .p0 span {
 	opacity: 0;
-	font-family: brenner;
 }
+
 .p0.on span:first-of-type {
 	opacity: 1;
 	transition: 0s;
-	font-weight: 200;
+	font-weight: 400;
+    font-size: 1em;
+    color: grey;
+    
 }
 .p0.on span:nth-of-type(2) {
 	opacity: 1;
 	transition: 0s .4s;
 	margin-right: -.25em;
+    font-size: 1em;
 	font-weight: 400;
+    color: grey;
 }
 .p0.on span:nth-of-type(3) {
 	opacity: 1;
 	transition: 0s .5s;
 	margin-right: -.25em;
-	font-weight: 600;
+	font-weight: 400;
+    font-size: 1em;
+    color: grey;
 }
 .p0.on span:nth-of-type(4) {
 	opacity: 1;
 	transition: 0s .7s;
 	margin-right: -.25em;
-	font-weight: 800;
+	font-weight: 400;
+    font-size: 1em;
+    color: grey;
 }
 .p0.on span:nth-of-type(5) {
 	opacity: 1;
 	transition: 0s 1.1s;
 	margin-right: -.25em;
-	font-family: "brenner sans";
+    font-weight: 400;
+    font-size: 1em;
+    color: grey;
 }
 .p0.on span:nth-of-type(6) {
 	opacity: 1;
 	transition: 0s 1.4s;
 	margin-right: -.25em;
-	font-family: "brenner display";
+    font-weight: 400;
+    font-size: 1em;
+    color: grey;
 }
 .p0.on span:nth-of-type(7) {
 	opacity: 1;
 	transition: 0s 1.7s;
 	margin-right: -.25em;
-	font-family: "brenner script";
+    font-weight: 400;
+    font-size: 1em;
+    color: grey;
 }
 .p0.on span:nth-of-type(8) {
 	opacity: 1;
-	transition: 0s 2s;
-	font-family: "brenner script";
+	transition: 0s 1.3s;
+    font-weight: 400;
+    font-size: 1em;
+    color: grey;
+
 }
 .p0.on span:nth-of-type(9) {
 	opacity: 1;
-	transition: 0s 3s;
-	font-family: "brenner Sans condensed";
+	transition: 0s 2.5s;
+    font-weight: 400;
+    font-size: 1em;
+    color: grey;
+
 }
 .p0.on span:nth-of-type(10) {
 	opacity: 1;
-	transition: 0s 3.2s;
-	font-family: "brenner mono";
+	transition: 0s 2.8s;
+    font-weight: 400;
+    font-size: 1em;
+    color: grey;
+
 }
 .p0.on span:nth-of-type(11) {
 	opacity: 1;
-	transition: 0s 3.7s;
-	font-family: "brenner slab";
+	transition: 0s 3.1s;
+    font-weight: 400;
+    font-size: 1em;
+    color: grey;
+}
+
+
+.p0.on span:nth-of-type(12) {
+	opacity: 1;
+	transition: 0s 3.6s;
+    font-weight: 400;
+    font-size: 1em;
+    color: grey;
+
+}
+
+
+.p1.on span:nth-of-type {
+	opacity: 1;
+	transition: 0s;
+    font-weight: 400;
+    font-size: 1em;
+    color: salmon;
+
+}
+
+.p1.on span:nth-of-type(1) {
+	opacity: 1;
+	transition: 0s .4s;
+    font-weight: 400;
+    font-size: 1em;
+    color: grey;
+
+}
+
+.p2 span {
+	opacity: 0;
+}
+
+
+.p2.on span:nth-of-type {
+	opacity: 1;
+	transition: 0s;
+    font-weight: 400;
+    font-size: 5em;
+    color: grey;
+}
+
+.p2.on span:nth-of-type(1) {
+	opacity: 1;
+	transition: 0s;
+    font-weight: 400;
+    font-size: 5em;
+    color: grey;
+}
+
+
+.p2.on span:nth-of-child(2) {
+	opacity: 1;
+	transition: 0s .8s;
+    font-weight: 400;
+    font-size: 5em;
+    color: grey;
+}
+
+
+.p3.on span:nth-of-type {
+	opacity: 1;
+	transition: 0s;
+    font-weight: 400;
+    font-size: 5em;
+    color: grey;
+}
+
+
+.p2.on span:nth-of-type(1) {
+	opacity: 1;
+	transition: 0s .4s;
+    font-weight: 400;
+    font-size: 5em;
+    color: grey;
+}
+
+.p2.on span:nth-of-type() {
+	opacity: 1;
+	transition: 0s .8s;
+    font-weight: 400;
+    font-size: 5em;
+    color: grey;
 }
