--- a/closed-captions/css.css
+++ b/closed-captions/css.css
@@ -34,8 +34,7 @@ iframe{
     left: 525px;
     margin-top: 250px; 
     height: 300px;
-    width: 400px;
-    
+    width: 400px; 
     
 }
 
@@ -44,10 +43,10 @@ body {
     font-family: sans-serif;
     
   }
-    .gradient {
+.gradient {
   width: 100%;
   height: 100%;
-  animation: pulse 5s infinite;
+  animation: pulse 22s infinite;
 }
 
 @keyframes pulse {
@@ -55,7 +54,14 @@ body {
     background-color: black;
   }
   100% {
-    background-color: grey;
+    background-color: lightgrey;
+  }
+}
+
+html,
+body {
+  height: 100%;
+}
 
 
         
