--- a/closed-captions/css.css
+++ b/closed-captions/css.css
@@ -21,16 +21,20 @@ Feel free to adjust the defaults to your needs.
 }
 .voice1 {
 	font-style: italic;   
+/*
     margin-top: -500px;
     margin-left: 50px; 
+*/
     
 }
 
 .voice2 {
     text-transform: uppercase;
     font-size: 0.4em;
-    margin-top: 500px;
+/*
+    margin-top: 1px;
     margin-left: 950px;
+*/
 }
 
 .voice3 {
@@ -53,9 +57,6 @@ iframe{
 body {
     font-family: sans-serif;
     background-color: black;
-    
-  
-    
     
   }
 
@@ -102,10 +103,7 @@ body {
 
 .sound2 iframe {
         
-/*
-filter: drop-shadow(0 0 0.75rem red);
-transition: 1s;
-*/
+
 animation: sirene 0.5s linear forwards 1;
     }
 
@@ -333,21 +331,21 @@ You probably want to change the styling.
 	opacity: 1;
 	transition: 0s;
     font-weight: 400;
-    color: lightgray;
+    color: grey;
 }
 
 .p4.on span:nth-of-type(2) {
 	opacity: 1;
 	transition: 0s .2s;
     font-weight: 400;
-    color: lightgray;
+    color: grey;
 }
 
 .p4.on span:nth-of-type(3) {
 	opacity: 1;
 	transition: 0s .4s;
     font-weight: 400;
-    color: lightgray;
+    color: grey;
 }
 
 
@@ -355,21 +353,21 @@ You probably want to change the styling.
 	opacity: 1;
 	transition: 0s .6s;
     font-weight: 400;
-    color: lightgray;
+    color: grey;
 }
 
 .p4.on span:nth-of-type(5) {
 	opacity: 1;
 	transition: 0s .9s;
     font-weight: 400;
-    color: lightgray;
+    color: grey;
 }
 
 .p4.on span:nth-of-type(6) {
 	opacity: 1;
 	transition: 0s 1.4s;
     font-weight: 400;
-    color: lightgray;
+    color: grey;
 }
 
 
